force-app/main/default/objects/Store_Supply_Order__c/fields/Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Status__c</fullName>
    <label>Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Delayed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>