force-app/main/default/objects/Store_Supply_Order__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coffee</fullName>
            </value>
            <value>
                <fullName>Cups</fullName>
            </value>
            <value>
                <fullName>Pastries</fullName>
            </value>
            <value>
                <fullName>Utensils</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>