force-app/main/default/objects/Store_Supply_Order__c/fields/Retail_Store__c.field-meta.xml
<CustomField>
    <fullName>Retail_Store__c</fullName>
    <label>Retail Store</label>
    <referenceTo>Retail_Store__c</referenceTo>
    <relationshipLabel>Store Supply Orders</relationshipLabel>
    <relationshipName>Store_Supply_Orders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>