force-app/main/default/objects/Store_Supply_Order__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <label>Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Store Supply Orders</relationshipLabel>
    <relationshipName>Store_Supply_Orders</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>